--- a/PersonalisationGroups.Tests/PersonalisationGroups.Tests.csproj
+++ b/PersonalisationGroups.Tests/PersonalisationGroups.Tests.csproj
@@ -7,18 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Moq" Version="4.16.1" />
-    <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\PersonalisationGroups\PersonalisationGroups.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Criteria\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
+    <PackageReference Include="Umbraco.Cms.Tests" Version="9.0.0-alpha004" />
   </ItemGroup>
 
 </Project>
