--- a/PersonalisationGroups/PersonalisationGroups.csproj
+++ b/PersonalisationGroups/PersonalisationGroups.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <RootNamespace>Our.Umbraco.PersonalisationGroups</RootNamespace>
     <TargetFramework>net5.0</TargetFramework>
+    <Version>3.0.0-alpha</Version>
   </PropertyGroup>
 
   <ItemGroup>
