Updated project file to include details for NuGet package.

--- a/PersonalisationGroups/PersonalisationGroups.csproj
+++ b/PersonalisationGroups/PersonalisationGroups.csproj
@@ -1,9 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <AssemblyName>Our.Umbraco.PersonalisationGroups</AssemblyName>
     <RootNamespace>Our.Umbraco.PersonalisationGroups</RootNamespace>
     <TargetFramework>net5.0</TargetFramework>
+    <PackageId>UmbracoPersonalisationGroups</PackageId>
     <Version>3.0.0-alpha</Version>
+    <Authors>Andy Butland</Authors>
+    <Description>An Umbraco package supporting personalisation of content to different groups of site visitors.</Description>
+    <Copyright>2021 Andy Butland</Copyright>
+    <PackageProjectUrl>https://github.com/AndyButland/UmbracoPersonalisationGroupsCore/</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/AndyButland/UmbracoPersonalisationGroupsCore/</RepositoryUrl>
+    <RepositoryType>Github</RepositoryType>
+    <PackageTags>Umbraco</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,9 +21,28 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="App_Plugins/PersonalisationGroups/**/*.*" copyToOutput="true">
+      <Pack>true</Pack>
+      <PackagePath>contentFiles\App_Plugins\PersonalisationGroups</PackagePath>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Data\continents.txt" />
+    <None Remove="Data\countries.txt" />
+    <None Remove="Data\regions.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>PersonalisationGroups.Tests</_Parameter1>
     </AssemblyAttribute>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Data\continents.txt" />
+    <EmbeddedResource Include="Data\countries.txt" />
+    <EmbeddedResource Include="Data\regions.txt" />
   </ItemGroup>
 
 </Project>
