--- a/PersonalisationGroups.Tests/UmbracoPersonalisationGroups.Tests.csproj
+++ b/PersonalisationGroups.Tests/UmbracoPersonalisationGroups.Tests.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PersonalisationGroups\PersonalisationGroups.csproj" />
+    <ProjectReference Include="..\PersonalisationGroups\UmbracoPersonalisationGroups.csproj" />
   </ItemGroup>
 
   <ItemGroup>
