Updated to beta 2, added readme, updating styling for back-office.

--- a/PersonalisationGroups/UmbracoPersonalisationGroups.csproj
+++ b/PersonalisationGroups/UmbracoPersonalisationGroups.csproj
@@ -6,7 +6,7 @@
     <ContentTargetFolders>.</ContentTargetFolders>
     <TargetFramework>net5.0</TargetFramework>
     <PackageId>UmbracoPersonalisationGroups</PackageId>
-    <Version>3.0.0-alpha-2</Version>
+    <Version>3.0.0-beta1</Version>
     <Authors>Andy Butland</Authors>
     <Description>An Umbraco package supporting personalisation of content to different groups of site visitors.</Description>
     <Copyright>2021 Andy Butland</Copyright>
@@ -18,10 +18,12 @@
 
   <ItemGroup>
     <PackageReference Include="MaxMind.GeoIP2" Version="4.0.1" />
-    <PackageReference Include="Umbraco.Cms.Web.Common" Version="9.0.0-alpha004" />
+    <PackageReference Include="Umbraco.Cms.Web.Common" Version="9.0.0-beta002" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="App_Plugins\PersonalisationGroups\personalisation-group-definition.html" />
+    <None Remove="App_Plugins\PersonalisationGroups\personalisation-groups.css" />
     <None Remove="Data\continents.txt" />
     <None Remove="Data\countries.txt" />
     <None Remove="Data\regions.txt" />
@@ -48,6 +50,20 @@
     <EmbeddedResource Include="Data\continents.txt" />
     <EmbeddedResource Include="Data\countries.txt" />
     <EmbeddedResource Include="Data\regions.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="App_Plugins\PersonalisationGroups\personalisation-groups.css">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="App_Plugins\PersonalisationGroups\personalisation-group-definition.html">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
