--- a/PersonalisationGroups.Tests/UmbracoPersonalisationGroups.Tests.csproj
+++ b/PersonalisationGroups.Tests/UmbracoPersonalisationGroups.Tests.csproj
@@ -17,7 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
-    <PackageReference Include="Umbraco.Cms.Tests" Version="9.0.0-alpha004" />
+    <PackageReference Include="Umbraco.Cms.Tests" Version="9.0.0-beta002" />
   </ItemGroup>
 
 </Project>
