--- a/PersonalisationGroups/UmbracoPersonalisationGroups.csproj
+++ b/PersonalisationGroups/UmbracoPersonalisationGroups.csproj
@@ -6,7 +6,7 @@
     <ContentTargetFolders>.</ContentTargetFolders>
     <TargetFramework>net5.0</TargetFramework>
     <PackageId>UmbracoPersonalisationGroups</PackageId>
-    <Version>3.1.0-alpha001</Version>
+    <Version>3.1.0</Version>
     <Authors>Andy Butland</Authors>
     <Description>An Umbraco package supporting personalisation of content to different groups of site visitors.</Description>
     <Copyright>2021 Andy Butland</Copyright>
@@ -14,6 +14,7 @@
     <RepositoryUrl>https://github.com/AndyButland/UmbracoPersonalisationGroupsCore/</RepositoryUrl>
     <RepositoryType>Github</RepositoryType>
     <PackageTags>Umbraco</PackageTags>
+	<PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
