--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,9 +1,9 @@
 ﻿<Project>
 	<PropertyGroup>
-		<Version>3.2.0-rc001</Version>
+		<Version>3.2.0</Version>
 		<AssemblyVersion>3.2.0</AssemblyVersion>
-		<InformationalVersion>3.2.0-rc001</InformationalVersion>
-		<FileVersion>3.2.0-rc001</FileVersion>
+		<InformationalVersion>3.2.0</InformationalVersion>
+		<FileVersion>3.2.0</FileVersion>
 		<LangVersion Condition="'$(LangVersion)' == ''">9.0</LangVersion>
 		<NeutralLanguage>en-US</NeutralLanguage>
 		<TargetFramework>net5.0</TargetFramework>
@@ -12,7 +12,7 @@
 		<PackageProjectUrl>https://github.com/AndyButland/UmbracoPersonalisationGroupsCore/</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/AndyButland/UmbracoPersonalisationGroupsCore/</RepositoryUrl>
 		<RepositoryType>Github</RepositoryType>
-		<PackageTags>Umbraco</PackageTags>
+		<PackageTags>Umbraco Umbraco-Marketplace</PackageTags>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	</PropertyGroup>
 </Project>
