--- a/PersonalisationGroups.Core/UmbracoPersonalisationGroups.Core.csproj
+++ b/PersonalisationGroups.Core/UmbracoPersonalisationGroups.Core.csproj
@@ -13,7 +13,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="MaxMind.GeoIP2" Version="4.0.1" />
-		<PackageReference Include="Umbraco.Cms.Web.Common" Version="9.0.0" />
+		<PackageReference Include="Umbraco.Cms.Web.Common" Version="[9.0.0, 12)" />
 	</ItemGroup>
 
 	<ItemGroup>
