Added icon and readme references.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -13,6 +13,7 @@
 		<RepositoryUrl>https://github.com/AndyButland/UmbracoPersonalisationGroupsCore/</RepositoryUrl>
 		<RepositoryType>Github</RepositoryType>
 		<PackageTags>Umbraco</PackageTags>
+		<PackageIcon>icon.png</PackageIcon>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	</PropertyGroup>
 </Project>
