--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,6 @@ TestWebApp.V14/
 PersonalisationGroups.Tests/*schema*.json
 
 deploy.ps1
+
+PersonalisationGroups/wwwroot/*.js
+PersonalisationGroups/wwwroot/*.map
