--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,6 @@
 ﻿<Project>
 	<PropertyGroup>
-		<Version>4.0.0</Version>
+		<Version>4.0.0-rc1</Version>
 		<AssemblyVersion>4.0.0</AssemblyVersion>
 		<InformationalVersion>4.0.0-rc1</InformationalVersion>
 		<FileVersion>4.0.0</FileVersion>
