--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,8 @@
 ﻿<Project>
 	<PropertyGroup>
-		<Version>4.0.0-rc1</Version>
+		<Version>4.0.0</Version>
 		<AssemblyVersion>4.0.0</AssemblyVersion>
-		<InformationalVersion>4.0.0-rc1</InformationalVersion>
+		<InformationalVersion>4.0.0</InformationalVersion>
 		<FileVersion>4.0.0</FileVersion>
 		<LangVersion Condition="'$(LangVersion)' == ''">12.0</LangVersion>
 		<NeutralLanguage>en-US</NeutralLanguage>
