Upgrade for support of Umbraco 15.

--- a/PersonalisationGroups/Client/tsconfig.json
+++ b/PersonalisationGroups/Client/tsconfig.json
@@ -21,6 +21,10 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
+    "types": [
+      "@umbraco-cms/backoffice/extension-types"
+    ],
+
     "paths": {
       "@personalisationgroups/generated": [
         "./generated/index.ts"
