--- a/PersonalisationGroups/Client/package.json
+++ b/PersonalisationGroups/Client/package.json
@@ -1,11 +1,11 @@
 {
   "name": "personalisation-groups",
   "private": true,
-  "version": "0.0.0",
+  "version": "6.0.0",
   "type": "module",
   "engines": {
-    "node": ">=20.9 <21",
-    "npm": ">=10.1 < 11"
+		"node": ">=22",
+		"npm": ">=10.9"
   },
   "scripts": {
     "dev": "vite",
@@ -18,20 +18,35 @@
     "lint": "eslint src"
   },
   "devDependencies": {
-    "@hey-api/openapi-ts": "^0.46.3",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "^7.13.0",
-    "@umbraco-cms/backoffice": "^16.1.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-lit": "^1.11.0",
-    "eslint-plugin-lit-a11y": "^4.1.1",
-    "eslint-plugin-local-rules": "^2.0.1",
-    "eslint-plugin-wc": "^2.0.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vite-tsconfig-paths": "^4.3.1"
+    "@eslint/compat": "^1.3.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.29.0",
+    "@hey-api/openapi-ts": "0.77.0",
+    "@types/node": "^22.15.33",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
+    "@umbraco-cms/backoffice": "16.0.0",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-lit": "^2.1.1",
+    "eslint-plugin-lit-a11y": "^4.1.4",
+    "eslint-plugin-local-rules": "^3.0.2",
+    "eslint-plugin-prettier": "^5.5.1",
+    "eslint-plugin-wc": "^3.0.1",
+    "globals": "^16.2.0",
+    "remark-gfm": "^4.0.1",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.0",
+    "vite": "^6.3.5",
+    "vite-plugin-static-copy": "^3.1.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "web-component-analyzer": "^2.0.0"
+  },
+  "overrides": {
+    "@umbraco-cms/backoffice": {
+      "@hey-api/client-fetch": "^0.13.1"
+    }
   }
 }
