--- a/PersonalisationGroups/Client/package.json
+++ b/PersonalisationGroups/Client/package.json
@@ -1,31 +1,26 @@
 {
   "name": "personalisation-groups",
   "private": true,
-  "version": "6.1.0",
+  "version": "7.0.0",
   "type": "module",
   "engines": {
     "node": ">=22",
     "npm": ">=10.9"
   },
   "scripts": {
-    "dev": "vite",
+    "watch": "tsc && vite build --watch",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "watch": "vite build --watch",
-    "generate:api": "openapi-ts",
-    "lint:errors": "npm run lint -- --quiet",
-    "lint:fix": "npm run lint -- --fix",
-    "lint": "eslint src"
+    "generate:api": "openapi-ts"
   },
   "devDependencies": {
-    "@hey-api/client-fetch": "0.12.0",
-    "@hey-api/openapi-ts": "0.71.0",
-    "@umbraco-cms/backoffice": "16.2.0",
-    "chalk": "^5.4.1",
-    "cross-env": "^7.0.3",
+    "@hey-api/client-fetch": "^0.13.1",
+    "@hey-api/openapi-ts": "^0.85.0",
+    "@umbraco-cms/backoffice": "17.1.0",
+    "chalk": "^5.6.2",
+    "cross-env": "^10.1.0",
     "node-fetch": "^3.3.2",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.4",
+    "typescript": "^5.9.3",
+    "vite": "^7.1.9",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
